2005-04-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR 14884
	* Apply:
	2004-03-25  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fixinc/inclhack.def (rpc_xdr_lvalue_cast_a,
	rpc_xdr_lvalue_cast_b): New fixes.
	* fixinc/tests/base/rpc/xdr.h: Add new tests.

2005-04-30  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* Apply:
	2004-10-21  Aldy Hernandez  <aldyh@redhat.com>

	PR target/18004.
	* expmed.c (store_bit_field): Pass original 'value' before
	recursing.

2005-04-22  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* doc/invoke.texi (SPARC options): Document that -mapp-regs
	is turned off by default on Solaris.

2005-04-06  James E. Wilson  <wilson@specifixinc.com>

	PR target/20670
	* unwind-ia64.c (uw_intall_context): Add missing load of r27.

2005-04-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	PR c++/18644
	* doc/invoke.texi (-Wsynth): Remove documentation.

2005-03-28  James E Wilson  <wilson@specifixinc.com>

	PR target/20286.
	* config/ia64/ia64.c (ia64_encode_section_info): Only abort if encoding
	or symbol_str[1] is 's'.

2005-02-23  Michael Beach  <michaelb@ieee.org>

	PR target/20159
	* config/sparc/t-elf (startup files): Assemble with CPP.

2005-02-11  John David Anglin  <dave.anglin@nrc-crnc.gc.ca>

        PR middle-end/19697
	2005-01-30  Roger Sayle  <roger@eyesopen.com>
        * config/pa/pa.md (anddi3, iordi3): On HPPA64, disallow an integer
        constant as the second operand and a register as the third.

2005-01-29  Alan Modra  <amodra@bigpond.net.au>

	* unwind-dw2.c (execute_stack_op): Add missing cases for
	DW_OP_shl, DW_OP_shr, DW_OP_shra, DW_OP_xor.

2005-01-28  Stephane Carrez  <stcarrez@nerim.fr>

	PR target/15384
	* config/m68hc11/t-m68hc11-gas (dp-bit.c): Fix typo causing a
	configuration part of dp-bit.c to be lost.

2005-01-27  Ulrich Weigand  <uweigand@de.ibm.com>

	PR target/17771
	Backport from mainline:
	* config/s390/s390.md ("reload_outti"): Remove predicate for