@@ -1,3 +1,9 @@
+2005-05-01  Roger Sayle  <roger@eyesopen.com>
+
+	PR rtl-optimization/19579
+	Backport from mainline
+	* gcc.c-torture/execute/20050124-1.c: New test.
+
 2005-04-04  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	PR c++/18644
